# Sphinx_OS

./: .env.example  .gitignore  ALGEBRAIC_ENFORCEMENT_PRINCIPLE.md  ANUBISCORE_FUSION_SUMMARY.md  BTC_WORMHOLE.md  DEPLOYMENT.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DIGITALOCEAN_DEPLOYMENT.md  DIGITALOCEAN_QUICKREF.md  Dockerfile  ECONOMICS.md  ECONOMIC_SYSTEM_IMPLEMENTATION.md  EXPERIMENTAL_PROPOSAL.md  FINAL_SUMMARY.txt  GASLESS_BLOCKCHAIN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  JONES_QUANTUM_GRAVITY_SUMMARY.md  LAUNCH_TODAY.md  LICENSE  MAINNET_CHECKLIST.md  MANIFEST.in  MULTI_TOKEN_IMPLEMENTATION_SUMMARY.md  Makefile  NPTC_IMPLEMENTATION_SUMMARY.md  OMEGA_BRANE_README.md  OMEGA_BRANE_SECURITY_SUMMARY.md  ORACLE_DEPLOYMENT.md  POX_INTEGRATION_SUMMARY.md  PR_SUMMARY.md  QUANTUM_IMPLEMENTATION_SUMMARY.md  QUANTUM_MINER_DEPLOYMENT.md  QUANTUM_MINER_INTEGRATION.md  QUANTUM_PIRATE_MINER_README.md  QUICKDEPLOY.md  README.md  RIEMANN_HYPOTHESIS_PROOF.md  SECURITY_ADVISORY.md  (+57 more)
circuits/: shell50.circom  shell50_final.vkey.json  token_transfer.circom  yield_proof.circom
config/: bridge.yaml  fees.yaml  genesis.json  local.yaml  mainnet.yaml  mining.yaml  testnet.yaml
contracts/: README.md  hardhat.config.js  package.json  pox-automation.clar
core/: __init__.py  anubis_core.py  spin_network.py
dapp/: next.config.js  package.json
data/: referrals.db  revenue.db  sphinxskynet.db  subscriptions.db
docs/: API.md  BLOCKCHAIN.md  BRIDGE.md  MAINNET_DEPLOYMENT.md  MINING.md  MULTI_TOKEN_INTEGRATION.md  NFT_MONETIZATION_STRATEGY.md  OMEGA_BRANE_DOCUMENTATION.md  WEB_UI.md  unified_zk_prover.md
frontend/: index.html
installers/: install.sh
licenses/: CERN-OHL-S-v2.tex  GPL-v3.tex
monitoring/: alerts.yaml
mrbeast/: mr_beast.py
quantum/: __init__.py  error_nexus.py  quantum_circuit.py  unified_toe.py
quantum_game_web/: .gitignore  DEPLOYMENT_GUIDE.md  README.md  app.py  example_embed.html  game_engine.py  requirements.txt
quantum_gravity/: README.md  __init__.py  hyper_relativity.py  j4_scalar_quantum_gravity.py  jones_quantum_gravity.py  nptc_framework.py  octonionic_holonomy  quantum_gravity_proof.py  toe_integration.py  weyl_nodes.py
rosetta/: rosetta-config.json  rosetta_api.py
scripts/: build_binaries.sh  deploy_infrastructure.sh  (+2 more)
(+230 files in other folders)
