[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SphinxOS"
version = "0.1.0"
authors = [
  { name = "Travis Jones" },
]
description = "A unified quantum-spacetime operating system kernel integrating a 6D Theory of Everything simulation with a universal quantum circuit simulator."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["quantum computing", "6D spacetime", "theory of everything", "temporal vector lattice entanglement", "TVLE", "Rydberg gates"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: SphinxOS Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=0.24.0",
    "ecdsa>=0.17.0",
    "base58>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/Holedozer1229/Sphinx_OS"
"Bug Tracker" = "https://github.com/Holedozer1229/Sphinx_OS/issues"
Documentation = "https://github.com/Holedozer1229/Sphinx_OS/blob/main/README.md"
"Source Code" = "https://github.com/Holedozer1229/Sphinx_OS"
